Remove unnecessary files; Add some to be ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ venv
 kaggle_house_prices/catboost_info/
 kaggle_house_prices/graphs/
 kaggle_house_prices/log.txt
+
+kaggle_loan_approval/inpput_data/
+kaggle_loan_approval/graphs/
+kaggle_loan_approval/models/
+kaggle_load_approval/submissions
+kaggle_load_approval/log.txt
+
